# quick-data-summary

./: README.md  pyproject.toml  requirements.txt
examples/: sales.csv
src/: main.py  summary_engine.py
tests/: test_summary_engine.py
